--- a/Gnuplot.html
+++ b/Gnuplot.html
@@ -1,17 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
 <head>
 <title>Gnuplot.py</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
-<body>
+<body bgcolor="#ffffff">
 
-<h1>Gnuplot.py on <a href="http://sourceforge.net/projects/gnuplot-py"><img
+<center><h1>Gnuplot.py on <a href="http://sourceforge.net"><img
 src="http://sourceforge.net/sflogo.php?group_id=17434&amp;type=1"
- alt="SourceForge Logo"/></a></h1>
-<!-- width="88" height="31" border="0" -->
+width="88" height="31" border="0" alt="SourceForge Logo"></a></h1></center>
 
 <table>
 <tr>
@@ -21,23 +19,19 @@ src="http://sourceforge.net/sflogo.php?group_id=17434&amp;type=1"
 <td>
 <ul>
   <li> The <a
-       href="http://gnuplot-py.sourceforge.net">Gnuplot.py home page</a></li>
+       href="http://gnuplot-py.sourceforge.net">Gnuplot.py home page</a>
   <li> The <a
        href="http://sourceforge.net/projects/gnuplot-py/">Gnuplot.py
-       project page</a> on SourceForge.</li>
+       project page</a> on SourceForge.
   <li> Download the <a
        href="http://sourceforge.net/project/showfiles.php?group_id=17434">
-       current version (version 1.8)</a> (includes documentation)</li>
+       current version (version 1.8)</a> (includes documentation)
   <li> The <a
        href="http://gnuplot-py.sourceforge.net/doc">online
-       documentation</a></li>
+       documentation</a>
   <li> The <a
        href="http://lists.sourceforge.net/lists/listinfo/gnuplot-py-users">Gnuplot.py
-       users' mailing list</a></li>
-  <li> Contributed translations of this page:
-       <a href="http://www.moneyaisle.com/worldwide/gnuplot-be">Belorussian</a>,
-       <a href="http://webhostinggeeks.com/science/gnuplot-sourceforge-ro">Romanian</a>
-       </li>
+       users' mailing list</a>
 </ul>
 </td>
 </tr>
@@ -49,10 +43,10 @@ src="http://sourceforge.net/sflogo.php?group_id=17434&amp;type=1"
 href="http://www.gnuplot.info/">gnuplot</a>, the popular open-source
 plotting program.  It allows you to use gnuplot from within Python to
 plot arrays of data from memory, data files, or mathematical
-functions.  If you use Python to perform computations or as 'glue' for
+functions.  If you use Python to perform computations or as `glue' for
 numerical programs, you can use this package to plot data on the fly
 as they are computed.  And the combination with Python makes it is
-easy to automate things, including to create crude 'animations' by
+easy to automate things, including to create crude `animations' by
 plotting different datasets one after another. </p>
 
 <p> Commands are communicated to gnuplot through a pipe and data
@@ -66,17 +60,16 @@ for running Gnuplot.py under Jython/Java. </p>
 flexibility to set plot options and to run multiple gnuplot sessions
 simultaneously.  If you are more ambitious, it is not difficult to add
 entirely new types of plottable items by deriving from the
-'<tt>PlotItem</tt>' class. </p>
+`<tt>PlotItem</tt>' class. </p>
 
 <p> The package includes a demonstration that can be run by typing
-'<tt>python demo.py</tt>'. </p>
+`<tt>python demo.py</tt>'. </p>
 
 
 <h2>News</h2>
 
-<p> (2 May 2008) Gnuplot.py version 1.8 is out.  This version
-includes bugfixes and improvements that have piled up since 1.7,
-including compatibility with NumPy.
+<p> (January 2008) Gnuplot.py version 1.8 is out.  This version
+includes bugfixes and improvements that have piled up since 1.7.
 For more information, read the <tt>NEWS.txt</tt> file in the distribution. </p>
 
 <p> (17 October 2003) Gnuplot.py version 1.7 is out.  This version
@@ -89,7 +82,7 @@ read the <tt>NEWS.txt</tt> file in the distribution. </p>
 <h2>Documentation</h2>
 
 <p> The quickest way to learn how to use Gnuplot.py is to install it
-then run the simple demonstration by typing '<tt>python demo.py</tt>',
+then run the simple demonstration by typing `<tt>python demo.py</tt>',
 then to look at the <tt>demo.py</tt> file to see the commands that
 create the demo.  One of the examples is probably similar to what you
 want to do. </p>
@@ -106,7 +99,7 @@ known to have some formatting problems.  Alternatively, you can look
 at the docstrings yourself by opening the python files in an
 editor. </p>
 
-<p> Finally, there is a <a
+<p> Finally, there is a new <a
 href="mailto:gnuplot-py-users@lists.sourceforge.net">mailing list</a>
 for Gnuplot.py users.  For more information about subscribing to the
 list or viewing the archive of old articles, please click <a
@@ -115,8 +108,9 @@ href="http://lists.sourceforge.net/lists/listinfo/gnuplot-py-users">here</a>.
 
 <p> To get good use out of Gnuplot.py, you will want to know something
 about gnuplot, for which a good source is the gnuplot help (run
-gnuplot then type 'help', or read it online at <a
-href="http://www.gnuplot.info/">the gnuplot website</a>).  You might also want to check out Bernhard Reiter's <a
+gnuplot then type `help', or read it online at <a
+href="http://www.gnuplot.info/gnuplot.html"> this
+website</a>).  You might also want to check out Bernhard Reiter's <a
 href="http://www.usf.uni-osnabrueck.de/~breiter/tools/gnuplot/index.en.html">
 gnuplot information page</a>, which has many more links. </p>
 
@@ -128,11 +122,11 @@ gnuplot information page</a>, which has many more links. </p>
 
 <p> Before you can use Gnuplot.py, you will need working versions of </p>
 <ul>
-  <li> the <a href="http://www.gnuplot.info">gnuplot</a> program,</li>
+  <li> the <a href="http://www.gnuplot.info">gnuplot</a> program,
   <li> <a href="http://www.python.org">Python</a> (version 2.2 or
-       later), and</li>
-  <li> the <a href="http://numpy.scipy.org/">"NumPy"</a> Numeric 
-       computation package for Python.</li>
+       later), and
+  <li> the <a href="http://numpy.sourceforge.net/"> Numeric Python
+       extension</a>
 </ul>
 
 <p> If you want to run under MS Windows, make sure you have
@@ -143,14 +137,14 @@ gnuplot information page</a>, which has many more links. </p>
   <li> <a
        href="http://sourceforge.net/project/showfiles.php?group_id=17434">Download</a>
        either <code>gnuplot-py-1.8.tar.gz</code> or <code>
-       Gnuplot-1.8.zip</code>.</li>
+       Gnuplot-1.8.zip</code>.
 
   <li> Gunzip and untar (or unzip) it, which will create a directory
-       called <code>gnuplot-1.8</code>.</li>
+       called <code>gnuplot-1.8</code>.
 
   <li> Refer to <tt>README.txt</tt> in that directory for further
        instructions.  Usually it should be enough to type <code>python
-       setup.py install</code>.</li>
+       setup.py install</code>.
 
 </ol>
 
@@ -168,11 +162,11 @@ but that there are some restrictions on your rights to incorporate it
 into commercial products.  See the <a href="LICENSE"> LICENCE</a> file
 for more information.  (If these restrictions are a problem for you,
 please contact me to discuss the issue.)
-</p>
 
 <h2>Credits</h2>
 
-<p> The Gnuplot.py package was written by Michael Haggerty. </p>
+<p> The Gnuplot.py package was written by <a
+href="http://monsoon.harvard.edu/~mhagger/">Michael Haggerty</a>. </p>
 
 <p> The package was inspired by and partly derived from the Gnuplot.py
 module written by <a href="http://starship.python.net/crew/hinsen/">
@@ -193,18 +187,18 @@ argument to Data and GridData. </p>
 <p> Thanks also to many other users who have submitted suggestions,
 bug fixes, and other feedback. </p>
 
-<hr/>
-<p>
-Written by Michael Haggerty (email <a href="mailto:mhagger@alum.mit.edu">
-&lt;<i>mhagger@alum.mit.edu</i>&gt;</a>)</p>
+<hr>
+
+Written by <a href="http://monsoon.harvard.edu/~mhagger/">Michael
+Haggerty</a> (email <a href="mailto:mhagger@alum.mit.edu">
+&lt;<i>mhagger@alum.mit.edu</i>&gt;</a>)<br>
 
 <p>
-    <a href="http://validator.w3.org/check?uri=referer"><img
-        src="http://www.w3.org/Icons/valid-xhtml10"
-        alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
-</p>
-<p>
+    <a href="http://validator.w3.org/check/referer">
+    <img border="0" src="http://www.w3.org/Icons/valid-html401"
+    	        alt="Valid HTML 4.01!" height="31" width="88">
+</a>
+This page should be viewable on any standards-compliant browser.
 </p>
 
-</body>
-</html>
+</body> </html>
